@@ -19,6 +19,16 @@ end_package
 
 begin_import
 import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|*
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -49,42 +59,8 @@ name|LoggerFactory
 import|;
 end_import
 
-begin_import
-import|import
-name|javax
-operator|.
-name|swing
-operator|.
-name|*
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|awt
-operator|.
-name|event
-operator|.
-name|ActionEvent
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|awt
-operator|.
-name|event
-operator|.
-name|ActionListener
-import|;
-end_import
-
 begin_comment
-comment|/**  * A base class for monitoring progress of long running tasks. It can runshowing the exact  * percentage of the task progress or in "indeterminate" mode.  *<p>  *<i>Warning: If the task started via "startAndWait()", caller must ensure that she is  * not running in the Swing EventDispatchThread, otherwise an exception is thrown, as the  * EvenDispatchThread will be blocked, preventing LongRunningTask from showing progress  * dialog.</i>  *</p>  *   */
+comment|/**  * A base class for monitoring progress of long running tasks. It can runshowing the exact  * percentage of the task progress or in "indeterminate" mode.  *<p>  *<i>Warning: If the task started via "startAndWait()", caller must ensure that she is  * not running in the Swing EventDispatchThread, otherwise an exception is thrown, as the  * EvenDispatchThread will be blocked, preventing LongRunningTask from showing progress  * dialog.</i>  *</p>  *  */
 end_comment
 
 begin_class
@@ -263,20 +239,9 @@ init|=
 operator|new
 name|Thread
 argument_list|(
-operator|new
-name|Runnable
-argument_list|()
-block|{
-specifier|public
-name|void
-name|run
-parameter_list|()
-block|{
+name|this
+operator|::
 name|internalExecute
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 argument_list|)
 decl_stmt|;
 name|Timer
@@ -287,23 +252,10 @@ name|Timer
 argument_list|(
 name|DEFAULT_MS_TO_DECIDE_TO_POPUP
 argument_list|,
-operator|new
-name|ActionListener
-argument_list|()
-block|{
-specifier|public
-name|void
-name|actionPerformed
-parameter_list|(
-name|ActionEvent
 name|e
-parameter_list|)
-block|{
+lambda|->
 name|showProgress
 argument_list|()
-expr_stmt|;
-block|}
-block|}
 argument_list|)
 decl_stmt|;
 name|progressDisplayTimer
@@ -394,25 +346,12 @@ argument_list|()
 operator|.
 name|addActionListener
 argument_list|(
-operator|new
-name|ActionListener
-argument_list|()
-block|{
-specifier|public
-name|void
-name|actionPerformed
-parameter_list|(
-name|ActionEvent
 name|e
-parameter_list|)
-block|{
+lambda|->
 name|setCanceled
 argument_list|(
 literal|true
 argument_list|)
-expr_stmt|;
-block|}
-block|}
 argument_list|)
 expr_stmt|;
 name|dialog
@@ -449,23 +388,10 @@ name|Timer
 argument_list|(
 literal|500
 argument_list|,
-operator|new
-name|ActionListener
-argument_list|()
-block|{
-specifier|public
-name|void
-name|actionPerformed
-parameter_list|(
-name|ActionEvent
 name|e
-parameter_list|)
-block|{
+lambda|->
 name|updateProgress
 argument_list|()
-expr_stmt|;
-block|}
-block|}
 argument_list|)
 expr_stmt|;
 name|this
