@@ -81,6 +81,7 @@ CAY-2601 Modeler DbImport: result dialog issues
 CAY-2603 NPE reloading project in the model
 CAY-2605 Modeler: Unable to save - java.nio.file.InvalidPathException
 CAY-2608 CayenneModeler: NPE when reverse engineering with an auto-adapter DataSource
+CAY-2609 Modeler: can't close dbImport result dialog window
 
 ----------------------------------
 Release: 4.1.B1
